Apply suggestions from code review
Co-authored-by: Stephen Gillie <114952565+stephengillie@users.noreply.github.com>

--- a/manifests/k/KhronosGroup/VulkanSDK/1.4.321.1/KhronosGroup.VulkanSDK.locale.en-US.yaml
+++ b/manifests/k/KhronosGroup/VulkanSDK/1.4.321.1/KhronosGroup.VulkanSDK.locale.en-US.yaml
@@ -12,7 +12,7 @@ Author: LunarG, Inc.
 PackageName: Vulkan SDK
 PackageUrl: https://vulkan.lunarg.com/sdk/home
 License: MIT or Apache-2.0
-LicenseUrl: https://vulkan.lunarg.com/software/license/vulkan-1.4.321.1-windows-license-summary.txt
+# LicenseUrl: https://vulkan.lunarg.com/software/license/vulkan-1.4.321.1-windows-license-summary.txt
 Copyright: Copyright (c) 2016-2025 LunarG Inc.
 ShortDescription: The Vulkan SDK provides Vulkan application developers with essential tools to accelerate the development process.
 Description: |-
@@ -29,7 +29,7 @@ Tags:
 - vulkan-api
 Agreements:
 - AgreementLabel: Vulkan SDK License Summary
-  AgreementUrl: https://vulkan.lunarg.com/software/license/vulkan-1.4.321.1-windows-license-summary.txt
+#  AgreementUrl: https://vulkan.lunarg.com/software/license/vulkan-1.4.321.1-windows-license-summary.txt
 ReleaseNotesUrl: https://vulkan.lunarg.com/doc/sdk/1.4.321.1/windows/release_notes.html
 Documentations:
 - DocumentLabel: Documentation
