--- a/manifests/a/Anaconda/Anaconda3/2025.06-1/Anaconda.Anaconda3.installer.yaml
+++ b/manifests/a/Anaconda/Anaconda3/2025.06-1/Anaconda.Anaconda3.installer.yaml
@@ -11,6 +11,7 @@ Commands:
 - python
 - pythonw
 ProductCode: Anaconda3 2025.06-1 (Python 3.13.5 64-bit)
+ReleaseDate: 2025-07-18
 Installers:
 - Architecture: x64
   Scope: user
