--- a/manifests/a/Anaconda/Anaconda3/2025.06-1/Anaconda.Anaconda3.locale.en-US.yaml
+++ b/manifests/a/Anaconda/Anaconda3/2025.06-1/Anaconda.Anaconda3.locale.en-US.yaml
@@ -21,7 +21,7 @@ Tags:
 - anaconda
 - conda
 - python
-ReleaseNotesUrl: https://www.anaconda.com/docs/getting-started/anaconda/release-notes
+ReleaseNotesUrl: https://www.anaconda.com/docs/getting-started/anaconda/release-notes#anaconda-2025-06-1
 PurchaseUrl: https://www.anaconda.com/pricing
 Documentations:
 - DocumentLabel: Documentation
