--- a/manifests/a/Anaconda/Miniconda3/py313_25.5.1-1/Anaconda.Miniconda3.installer.yaml
+++ b/manifests/a/Anaconda/Miniconda3/py313_25.5.1-1/Anaconda.Miniconda3.installer.yaml
@@ -12,6 +12,7 @@ Commands:
 - python
 - pythonw
 ProductCode: Miniconda3 py313_25.5.1-1 (Python 3.13.5 64-bit)
+ReleaseDate: 2025-06-24
 AppsAndFeaturesEntries:
 - DisplayName: Miniconda3 py313_25.5.1-1 (Python 3.13.5 64-bit)
   ProductCode: Miniconda3 py313_25.5.1-1 (Python 3.13.5 64-bit)
