--- a/manifests/a/Anaconda/Miniconda3/py313_25.5.1-1/Anaconda.Miniconda3.locale.en-US.yaml
+++ b/manifests/a/Anaconda/Miniconda3/py313_25.5.1-1/Anaconda.Miniconda3.locale.en-US.yaml
@@ -23,7 +23,7 @@ Tags:
 - miniconda
 - miniconda3
 - python
-ReleaseNotesUrl: https://www.anaconda.com/docs/getting-started/miniconda/release-notes
+ReleaseNotesUrl: https://www.anaconda.com/docs/getting-started/miniconda/release-notes#miniconda-25-5-1-0
 PurchaseUrl: https://www.anaconda.com/pricing
 Documentations:
 - DocumentLabel: Documentation
