--- a/manifests/j/JvanKatwijk/Qt-DAB/6.9.6/JvanKatwijk.Qt-DAB.locale.en-US.yaml
+++ b/manifests/j/JvanKatwijk/Qt-DAB/6.9.6/JvanKatwijk.Qt-DAB.locale.en-US.yaml
@@ -48,5 +48,6 @@ ReleaseNotes: |-
   As always, comments are welcome, One request though: if there is an issue, please specify version and
   platform
 ReleaseNotesUrl: https://github.com/JvanKatwijk/qt-dab/releases/tag/Qt-DAB-6.9.6
+InstallationNotes: This package requires a CPU with AVX2 support. If your CPU does not support AVX2, uninstall this package and install the scalar version instead.
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
