Apply suggestions from code review
- Add claims of AVX2 support info

Co-authored-by: evilbananas <evilbananas@users.noreply.github.com>

--- a/manifests/j/JvanKatwijk/Qt-DAB/Scalar/6.9.6/JvanKatwijk.Qt-DAB.locale.en-US.yaml
+++ b/manifests/j/JvanKatwijk/Qt-DAB/Scalar/6.9.6/JvanKatwijk.Qt-DAB.locale.en-US.yaml
@@ -47,5 +47,6 @@ ReleaseNotes: |-
   As always, comments are welcome, One request though: if there is an issue, please specify version
   and platform
 ReleaseNotesUrl: https://github.com/JvanKatwijk/qt-dab/releases/tag/Qt-DAB-6.9.6
+InstallationNotes: This package is for CPUs without AVX2 support. If your CPU supports AVX2, uninstall this package and install the standard version instead.
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
