--- a/manifests/p/PaulPacifico/ShutterEncoder/19.7/PaulPacifico.ShutterEncoder.installer.yaml
+++ b/manifests/p/PaulPacifico/ShutterEncoder/19.7/PaulPacifico.ShutterEncoder.installer.yaml
@@ -1,5 +1,5 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.12.0.schema.json
 
 PackageIdentifier: PaulPacifico.ShutterEncoder
 PackageVersion: "19.7"
@@ -16,7 +16,7 @@ InstallationMetadata:
   DefaultInstallLocation: '%ProgramFiles%\Shutter Encoder'
 Installers:
 - Architecture: x64
-  InstallerUrl: https://www.shutterencoder.com/Shutter%20Encoder%2019.7%20Windows%2064bits.exe
+  InstallerUrl: https://www.shutterencoder.com/old%20versions/Windows/Shutter%20Encoder%2019.7%20Windows%2064bits.exe
   InstallerSha256: 9112922B1AF4E5C1EDA9967931FD533782CCDB8780BFEBDE8D22466B1ECF65D4
 ManifestType: installer
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
