--- a/manifests/e/EnsoAnalytics/Enso/2025.3.1/EnsoAnalytics.Enso.locale.en-US.yaml
+++ b/manifests/e/EnsoAnalytics/Enso/2025.3.1/EnsoAnalytics.Enso.locale.en-US.yaml
@@ -18,6 +18,8 @@ CopyrightUrl: https://www.ensoanalytics.com/agreements
 ShortDescription: Full-featured data prep platform designed for collaboration.
 Description: 'Enso Analytics is a modern, workflow-based data preparation platform designed for teams. Keep your familiar, visual, no-code canvas and unlock powerful features: cross-platform support for Windows, Mac, and Linux, built-in scheduling, granular version history, and encrypted secrets. With seamless in-memory and in-database processing, your complex data prep runs efficiently where your data lives.'
 Moniker: enso
+ReleaseNotes: https://github.com/enso-org/enso/releases/tag/2025.3.1
+ReleaseNotesUrl: https://github.com/enso-org/enso/releases/tag/2025.3.1
 PurchaseUrl: https://www.ensoanalytics.com/product
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
