--- a/manifests/j/Jigsaw/OutlineManager/1.19.0/Jigsaw.OutlineManager.locale.en-US.yaml
+++ b/manifests/j/Jigsaw/OutlineManager/1.19.0/Jigsaw.OutlineManager.locale.en-US.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: Jigsaw.OutlineManager
 PackageVersion: 1.19.0
 PackageLocale: en-US
 Publisher: The Outline authors
-PublisherUrl: https://jigsaw.google.com/?hl=en
+# PublisherUrl: https://jigsaw.google.com/?hl=en
 PublisherSupportUrl: https://support.getoutline.org/s/?language=en_US
 PrivacyUrl: https://policies.google.com/privacy?hl=en
 Author: The Outline authors
