--- a/manifests/s/StanleyBlack&Decker/DewaltDesignAssist/1.7.7.0/StanleyBlack&Decker.DewaltDesignAssist.locale.en-US.yaml
+++ b/manifests/s/StanleyBlack&Decker/DewaltDesignAssist/1.7.7.0/StanleyBlack&Decker.DewaltDesignAssist.locale.en-US.yaml
@@ -5,9 +5,9 @@ PackageIdentifier: StanleyBlack&Decker.DewaltDesignAssist
 PackageVersion: 1.7.7.0
 PackageLocale: en-US
 Publisher: Stanley Black and Decker
-PublisherUrl: https://www.dewalt.com/
-PublisherSupportUrl: https://www.dewalt.com/support
-PrivacyUrl: https://www.stanleyblackanddecker.com/privacy-policy
+# PublisherUrl: https://www.dewalt.com/
+# PublisherSupportUrl: https://www.dewalt.com/support
+# PrivacyUrl: https://www.stanleyblackanddecker.com/privacy-policy
 Author: Stanley Black & Decker, Inc.
 PackageName: DEWALT DESIGN ASSIST
 PackageUrl: https://anchors.dewalt.com/anchors/support-software/dewalt_design_assist.php
