--- a/manifests/z/ZetaSoftwareGmbH/ZetaResourceEditor/2.3.103.0/ZetaSoftwareGmbH.ZetaResourceEditor.locale.en-US.yaml
+++ b/manifests/z/ZetaSoftwareGmbH/ZetaResourceEditor/2.3.103.0/ZetaSoftwareGmbH.ZetaResourceEditor.locale.en-US.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: ZetaSoftwareGmbH.ZetaResourceEditor
 PackageVersion: 2.3.103.0
 PackageLocale: en-US
 Publisher: Zeta Software GmbH
-PublisherUrl: https://www.zeta-resource-editor.com/about.html
+# PublisherUrl: https://www.zeta-resource-editor.com/about.html
 PublisherSupportUrl: https://github.com/UweKeim/ZetaResourceEditor/issues
 Author: Uwe Keim
 PackageName: Zeta Resource Editor
