--- a/manifests/m/Microsoft/WinAppCli/0.1.8/Microsoft.WinAppCli.installer.yaml
+++ b/manifests/m/Microsoft/WinAppCli/0.1.8/Microsoft.WinAppCli.installer.yaml
@@ -10,7 +10,7 @@ InstallerType: msix
 PackageFamilyName: winapp_8wekyb3d8bbwe
 Installers:
 - Architecture: x64
-  InstallerUrl: https://github.com/microsoft/winappcli/releases/download/v0.1.8/winappcli_0.1.8.0_x64.msix
+  InstallerUrl: https://github.com/microsoft/winappcli/releases/download/v0.1.8/winappcli_x64.msix
   InstallerSha256: 0BCB468B758F442DF38EACBEBAF31525EFD81E5D5C0E30D216345C0A27C14232
   SignatureSha256: 617B7465F5EB9B8B7837860A26C1F7DE039B3C1806C27C385FC5C9DE3A1D23AB
 - Architecture: arm64
