--- a/manifests/m/Microsoft/WinAppCli/0.1.8/Microsoft.WinAppCli.installer.yaml
+++ b/manifests/m/Microsoft/WinAppCli/0.1.8/Microsoft.WinAppCli.installer.yaml
@@ -14,7 +14,7 @@ Installers:
   InstallerSha256: 0BCB468B758F442DF38EACBEBAF31525EFD81E5D5C0E30D216345C0A27C14232
   SignatureSha256: 617B7465F5EB9B8B7837860A26C1F7DE039B3C1806C27C385FC5C9DE3A1D23AB
 - Architecture: arm64
-  InstallerUrl: https://github.com/microsoft/winappcli/releases/download/v0.1.8/winappcli_0.1.8.0_arm64.msix
+  InstallerUrl: https://github.com/microsoft/winappcli/releases/download/v0.1.8/winappcli_arm64.msix
   InstallerSha256: CBA6AD50963CBEFCD6D71EAAB9F428F1066656AD19B35808DFF2307E8AA2816A
   SignatureSha256: 5B3382EE1AD840ABD8D8A59EFBE96D6E0A4F02A92FE859AFEEB2C4DD1566C2F7
 ManifestType: installer
