--- a/manifests/a/AshokSK/ruster-env/0.2.1/AshokSK.ruster-env.installer.yaml
+++ b/manifests/a/AshokSK/ruster-env/0.2.1/AshokSK.ruster-env.installer.yaml
@@ -12,5 +12,9 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/Ashoksk029/ruster-env/releases/download/v0.2.1/ruster-env-windows-x64.zip
   InstallerSha256: B9DCB10BDAD75475E7579BE0C59FF9B06F18D1A13E7F0ABF61F429F46C18CCE3
+  Dependencies:
+    PackageDependencies:
+      - PackageIdentifier: Microsoft.VCRedist.2015+.x64
 ManifestType: installer
 ManifestVersion: 1.10.0
+
