--- a/manifests/l/lyswhut/AnyListen/0.4.0/lyswhut.AnyListen.installer.yaml
+++ b/manifests/l/lyswhut/AnyListen/0.4.0/lyswhut.AnyListen.installer.yaml
@@ -24,12 +24,12 @@ Installers:
   InstallerSha256: F86E70E72B405125230B115DB46CC1D6A4E0B1F0531532DD61D99527D48F81C5
   InstallerSwitches:
     Custom: /allusers
-- Architecture: arm64
-  Scope: user
-  InstallerUrl: https://github.com/any-listen/any-listen-desktop/releases/download/v0.4.0/any-listen-0.4.0-arm64-Setup.exe
-  InstallerSha256: 90B544A436EC9808D4BD5DF79A7904B0A298CB84CFDEBEAB02C0F7C007F97C3F
-  InstallerSwitches:
-    Custom: /currentuser
+# - Architecture: arm64
+#   Scope: user
+#   InstallerUrl: https://github.com/any-listen/any-listen-desktop/releases/download/v0.4.0/any-listen-0.4.0-arm64-Setup.exe
+#   InstallerSha256: 90B544A436EC9808D4BD5DF79A7904B0A298CB84CFDEBEAB02C0F7C007F97C3F
+#   InstallerSwitches:
+#     Custom: /currentuser
 - Architecture: arm64
   Scope: machine
   InstallerUrl: https://github.com/any-listen/any-listen-desktop/releases/download/v0.4.0/any-listen-0.4.0-arm64-Setup.exe
