--- a/manifests/a/Alex313031/Thorium/AVX2/138.0.7204.300/Alex313031.Thorium.AVX2.installer.yaml
+++ b/manifests/a/Alex313031/Thorium/AVX2/138.0.7204.300/Alex313031.Thorium.AVX2.installer.yaml
@@ -7,6 +7,8 @@ InstallerType: exe
 InstallModes:
 - silent
 InstallerSwitches:
+  Silent: --silent
+  SilentWithProgress: --silent
   Log: --verbose-logging --log-file="<LOGPATH>"
 ExpectedReturnCodes:
 - InstallerReturnCode: 4
@@ -35,13 +37,13 @@ ReleaseDate: 2026-01-01
 Installers:
 - Architecture: x64
   Scope: user
-  InstallerUrl: https://github.com/Alex313031/Thorium-Win/releases/download/138.0.7204.300/thorium_AVX2_mini_installer.exe
+  InstallerUrl: https://github.com/Alex313031/Thorium-Win/releases/download/M138.0.7204.300/thorium_AVX2_mini_installer.exe
   InstallerSha256: 8DDC33A6E18C481268C269E52983979FDD618D4191E8FD14CCF6B11754F5D04A
   InstallerSwitches:
     Custom: --do-not-launch-chrome
 - Architecture: x64
   Scope: machine
-  InstallerUrl: https://github.com/Alex313031/Thorium-Win/releases/download/138.0.7204.300/thorium_AVX2_mini_installer.exe
+  InstallerUrl: https://github.com/Alex313031/Thorium-Win/releases/download/M138.0.7204.300/thorium_AVX2_mini_installer.exe
   InstallerSha256: 8DDC33A6E18C481268C269E52983979FDD618D4191E8FD14CCF6B11754F5D04A
   InstallerSwitches:
     Custom: --do-not-launch-chrome --system-level
