Add installer switches for silent installation

--- a/manifests/a/Alex313031/Thorium/138.0.7204.300/Alex313031.Thorium.installer.yaml
+++ b/manifests/a/Alex313031/Thorium/138.0.7204.300/Alex313031.Thorium.installer.yaml
@@ -6,6 +6,10 @@ PackageVersion: 138.0.7204.300
 InstallerType: exe
 InstallModes:
 - silent
+InstallerSwitches:
+  Silent: --silent
+  SilentWithProgress: --silent
+  Log: --verbose-logging --log-file="<LOGPATH>"
 ExpectedReturnCodes:
 - InstallerReturnCode: 4
   ReturnResponse: downgrade
