--- a/manifests/x/Xournal++/Xournal++/1.3.1/Xournal++.Xournal++.installer.yaml
+++ b/manifests/x/Xournal++/Xournal++/1.3.1/Xournal++.Xournal++.installer.yaml
@@ -4,6 +4,8 @@
 PackageIdentifier: Xournal++.Xournal++
 PackageVersion: 1.3.1
 InstallerType: nullsoft
+InstallerSuccessCodes:
+- 3221225477
 UpgradeBehavior: install
 FileExtensions:
 - xoj
