New version: Xiaocai.MiniCADSee version 2026R2 (#328157)

--- a/manifests/x/Xiaocai/MiniCADSee/2026R2/Xiaocai.MiniCADSee.locale.zh-CN.yaml
+++ b/manifests/x/Xiaocai/MiniCADSee/2026R2/Xiaocai.MiniCADSee.locale.zh-CN.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.12.0.schema.json
 
 PackageIdentifier: Xiaocai.MiniCADSee
-PackageVersion: 2026R1.2
+PackageVersion: 2026R2
 PackageLocale: zh-CN
 Publisher: 上海晓材科技有限公司
 PublisherUrl: https://www.olcad.com/
@@ -24,9 +24,11 @@ Tags:
 - 蓝图
 - 阅读器
 ReleaseNotes: |-
-  1. 功能更好用：绘图全覆盖，操作更直观
-  2. 性能更强悍：打开图纸更快，缩放更流畅
-  3. 界面更简洁：UI 全新设计，体验更沉浸
+  1. 新增构造线、射线，辅助绘图更高效
+  2. 新增批注、文字编号功能，批注更清晰
+  3. 新增对象捕捉、极轴和定量捕捉设置，绘图更精准
+  4. 支持全屏展示，操作更沉浸
+  5. 命令行高亮匹配，输入更直观
 ReleaseNotesUrl: https://www.olcad.com/updateLog.html
 ManifestType: locale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
