Remove arm64 user installer

--- a/manifests/l/legeling/PromptHub/0.3.5/legeling.PromptHub.installer.yaml
+++ b/manifests/l/legeling/PromptHub/0.3.5/legeling.PromptHub.installer.yaml
@@ -22,12 +22,12 @@ Installers:
   InstallerSha256: 91CBE4754DFED45742A367F863A68EEDB13C0339B28B2ABC38392208C039F5E4
   InstallerSwitches:
     Custom: /allusers
-- Architecture: arm64
-  Scope: user
-  InstallerUrl: https://github.com/legeling/PromptHub/releases/download/v0.3.5/PromptHub-Setup-0.3.5-arm64.exe
-  InstallerSha256: E910CA7C8CB5AF2E51B6AA52A158910CDDF4220D0E281353AF405768AF234567
-  InstallerSwitches:
-    Custom: /currentuser
+# - Architecture: arm64
+#   Scope: user
+#   InstallerUrl: https://github.com/legeling/PromptHub/releases/download/v0.3.5/PromptHub-Setup-0.3.5-arm64.exe
+#   InstallerSha256: E910CA7C8CB5AF2E51B6AA52A158910CDDF4220D0E281353AF405768AF234567
+#   InstallerSwitches:
+#     Custom: /currentuser
 - Architecture: arm64
   Scope: machine
   InstallerUrl: https://github.com/legeling/PromptHub/releases/download/v0.3.5/PromptHub-Setup-0.3.5-arm64.exe
