--- a/manifests/s/seb07-cloud/AVDHealthMonitor/0.3.0/seb07-cloud.AVDHealthMonitor.locale.en-US.yaml
+++ b/manifests/s/seb07-cloud/AVDHealthMonitor/0.3.0/seb07-cloud.AVDHealthMonitor.locale.en-US.yaml
@@ -6,7 +6,18 @@ PackageVersion: 0.3.0
 PackageLocale: en-US
 Publisher: seb07-cloud
 PackageName: AVD Health Monitor
+PackageUrl: https://github.com/seb07-cloud/avd-health-monitor
 License: MIT License
+LicenseUrl: https://github.com/seb07-cloud/avd-health-monitor/blob/main/LICENSE
 ShortDescription: Real-time Azure Virtual Desktop endpoint health monitoring with FSLogix storage tracking
+Tags:
+  - azure
+  - avd
+  - azure-virtual-desktop
+  - fslogix
+  - health-monitor
+  - monitoring
+  - latency
+ReleaseNotesUrl: https://github.com/seb07-cloud/avd-health-monitor/releases/tag/avd-health-monitor-v0.3.0
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
