--- a/manifests/v/VisionAid/IvonaVoicePack/Welsh/2.6.2/VisionAid.IvonaVoicePack.Welsh.installer.yaml
+++ b/manifests/v/VisionAid/IvonaVoicePack/Welsh/2.6.2/VisionAid.IvonaVoicePack.Welsh.installer.yaml
@@ -10,7 +10,7 @@ AppsAndFeaturesEntries:
 - UpgradeCode: '{03848870-77B5-4AD1-9510-CE248B2A9114}'
 Installers:
 - Architecture: x86
-  InstallerUrl: https://visoftware.blob.core.windows.net/voices/windows/v2/VisionAid%20English%20-%20Other%20Ivona%20Voice%20Pack%20Setup%202.6.2.exe
+  InstallerUrl: https://visoftware.blob.core.windows.net/voices/windows/v2/VisionAid%20Welsh%20Ivona%20Voice%20Pack%20Setup%202.6.2.exe
   InstallerSha256: 8AE79BE9C8B521880041C0E2A8B88FBBD08165B5DC800ACA1959F93ADC0C64F1
 ManifestType: installer
 ManifestVersion: 1.12.0
