Restore WenAnLin.wedi.locale.en-US.yaml content

--- a/manifests/w/WenAnLin/wedi/0.6.0/WenAnLin.wedi.locale.en-US.yaml
+++ b/manifests/w/WenAnLin/wedi/0.6.0/WenAnLin.wedi.locale.en-US.yaml
@@ -12,7 +12,7 @@ PackageName: Wedi
 PackageUrl: https://github.com/superyngo/wedi
 License: MIT
 LicenseUrl: https://github.com/superyngo/wedi/blob/HEAD/LICENSE
-Copyright: Copyright (c) 2025 WenAnKo
+Copyright: Copyright (c) 2025 wen
 CopyrightUrl: https://github.com/superyngo/wedi?tab=MIT-1-ov-file
 ShortDescription: A lightweight, easy-to-use console text editor written in Rust.
 Description: wedi is a lightweight, keyboard-driven console text editor that provides intuitive text selection, cut, copy, paste, fast navigation, commenting, and search, delivering a smooth and efficient editing experience entirely in the terminal without requiring any GUI.
@@ -35,3 +35,4 @@ ReleaseNotes: |-
 ReleaseNotesUrl: https://github.com/superyngo/wedi/releases/tag/v0.6.0
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
+
