--- a/manifests/s/skssmd/Graft/2.1.1/skssmd.Graft.locale.en-US.yaml
+++ b/manifests/s/skssmd/Graft/2.1.1/skssmd.Graft.locale.en-US.yaml
@@ -15,25 +15,30 @@ License: MIT
 LicenseUrl: https://github.com/skssmd/Graft/blob/main/LICENSE
 Copyright: Copyright (c) 2025 skssmd
 CopyrightUrl: https://github.com/skssmd/Graft/blob/main/LICENSE
-ShortDescription: A high-performance, zero-overhead deployment engine that extends the Docker Compose workflow to cloud infrastructure via SSH
-Description: A high-performance, zero-overhead deployment engine that extends the Docker Compose workflow to cloud infrastructure via SSH. Graft enables native remote management of AWS, GCP, and VPS instances with no agent installs or server-side overhead required. With V2.0 Graft is now optimized for git and github actions ci/cd flow
+ShortDescription: High-performance deployment engine extending Docker Compose to cloud infra via SSH.
+Description: >-
+  A high-performance, zero-overhead deployment engine that extends the Docker Compose workflow to cloud infrastructure via SSH. 
+  Graft enables native remote management of AWS, GCP, and VPS instances with no agent installs required. 
+  V2.1.1 introduces Cloudflare API integration for automated DNS mapping and enhanced infrastructure backup capabilities.
 Moniker: graft
 Tags:
-- graft
-- Graft
-- deployment
-- devops
-- dev ops
-- easy deployment
-- docker compose
-- docker
-- ssh
-- hosting
-- cloud
+  - graft
+  - deployment
+  - devops
+  - docker-compose
+  - ssh
+  - cloudflare
+  - s3
+  - automation
+ReleaseNotes: >-
+  - Cloudflare API Integration: Automated DNS zone mapping based on Traefik host labels.
+  - Cloudflare Zone Registry: Manage multiple Cloudflare accounts and zones with an interactive selection menu.
+  - Database Backup Automation: Easily backup infrastructure databases to S3/R2 (Experimental).
+  - Optimized for Git and GitHub Actions CI/CD flows.
 ReleaseNotesUrl: https://github.com/skssmd/Graft/releases/tag/v2.1.1
-InstallationNotes: "Please restart your terminal to ensure the 'graft' command is available in your PATH.   IMPORTANT: To set up your host, please use a clean and fresh server. Graft automatically configures Docker, reverse proxies (Traefik), and load balancers, which may conflict with existing manual setups."
+InstallationNotes: Please restart your terminal after installation. IMPORTANT: Use a clean server; Graft configures Traefik and Docker automatically.
 Documentations:
-- DocumentLabel: Documentation
-  DocumentUrl: https://github.com/skssmd/Graft/blob/main/COMMANDS.md
+  - DocumentLabel: Documentation
+    DocumentUrl: https://github.com/skssmd/Graft/blob/main/COMMANDS.md
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
