--- a/manifests/m/Microsoft/MSIXCore/1.2.0.0/Microsoft.MSIXCore.locale.en-US.yaml
+++ b/manifests/m/Microsoft/MSIXCore/1.2.0.0/Microsoft.MSIXCore.locale.en-US.yaml
@@ -1,5 +1,4 @@
-# Created using wingetcreate 1.6.5.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.6.0.schema.json
+﻿#yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: Microsoft.MSIXCore
 PackageVersion: 1.2.0.0
@@ -12,7 +11,7 @@ PackageName: MSIX Core
 PackageUrl: https://github.com/microsoft/msix-packaging
 License: MIT
 LicenseUrl: https://github.com/microsoft/msix-packaging/raw/master/LICENSE
-Copyright: Copyright (c) 2018 Microsoft Corporation.
+Copyright: © 2018 Microsoft Corporation.
 CopyrightUrl: https://github.com/microsoft/msix-packaging/raw/master/LICENSE
 ShortDescription: The MSIX SDK project is an effort to enable developers on a variety of platforms to pack and unpack packages for the purposes of distribution from either the Microsoft Store, or their own content distribution networks.
 Tags:
@@ -22,4 +21,4 @@ Tags:
 - sdk
 ReleaseNotesUrl: https://github.com/microsoft/msix-packaging/releases/tag/MSIX-Core-1.2-release
 ManifestType: defaultLocale
-ManifestVersion: 1.6.0
+ManifestVersion: 1.12.0
