I had forgot to add the actual tags.

--- a/manifests/m/Microsoft/MSIXCore/1.2.0.0/Microsoft.MSIXCore.locale.en-US.yaml
+++ b/manifests/m/Microsoft/MSIXCore/1.2.0.0/Microsoft.MSIXCore.locale.en-US.yaml
@@ -15,10 +15,17 @@ Copyright: © 2018 Microsoft Corporation.
 CopyrightUrl: https://github.com/microsoft/msix-packaging/raw/master/LICENSE
 ShortDescription: The MSIX SDK project is an effort to enable developers on a variety of platforms to pack and unpack packages for the purposes of distribution from either the Microsoft Store, or their own content distribution networks.
 Tags:
+- msix-core
 - development
 - msi
 - msix
 - sdk
+- msixsdk
+- msix-sdk
+- msix-packaging
+- masixpackaging
+- makemsix
+- msixmgr
 ReleaseNotesUrl: https://github.com/microsoft/msix-packaging/releases/tag/MSIX-Core-1.2-release
 ManifestType: defaultLocale
-ManifestVersion: 1.12.0
+ManifestVersion: 1.12.0
