--- a/manifests/m/Microsoft/AppInstallerFileBuilder/1.2020.221.0/Microsoft.AppInstallerFileBuilder.locale.en-US.yaml
+++ b/manifests/m/Microsoft/AppInstallerFileBuilder/1.2020.221.0/Microsoft.AppInstallerFileBuilder.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageLocale: en-US
 Publisher: Microsoft
 PublisherUrl: https://github.com/microsoft/MSIX-Toolkit
 PublisherSupportUrl: https://github.com/microsoft/MSIX-Toolkit/issues
-PackageName: AppInstaller File Builder(Preview)
+PackageName: AppInstaller File Builder
 PackageUrl: https://github.com/microsoft/MSIX-Toolkit
 License: MIT
 LicenseUrl: https://github.com/microsoft/MSIX-Toolkit/blob/master/LICENSE
