--- a/manifests/m/Microsoft/DotNet/Runtime/2_2/2.2.8.28209/Microsoft.DotNet.Runtime.2_2.installer.yaml
+++ b/manifests/m/Microsoft/DotNet/Runtime/2_2/2.2.8.28209/Microsoft.DotNet.Runtime.2_2.installer.yaml
@@ -20,6 +20,8 @@ Installers:
   - RelativeFilePath: dotnet.exe
     PortableCommandAlias: dotnet2
   ArchiveBinariesDependOnPath: true
+  InstallerSuccessCodes:
+  - -2147450751
 - Architecture: arm
   InstallerUrl: https://builds.dotnet.microsoft.com/dotnet/Runtime/2.2.8/dotnet-runtime-2.2.8-win-arm.zip
   InstallerSha256: BB5512AEB67BD86956ACBC0F70A0263375B27933440BC566805D69500E7610F8
