--- a/manifests/t/TheBrowserCompany/Arc/1.85.0.301/TheBrowserCompany.Arc.installer.yaml
+++ b/manifests/t/TheBrowserCompany/Arc/1.85.0.301/TheBrowserCompany.Arc.installer.yaml
@@ -22,5 +22,7 @@ Installers:
   InstallerUrl: https://releases.arc.net/windows/prod/1.85.0.301/Arc.arm64.msix
   InstallerSha256: 06A7B2D2895591253ACDF54BB7530536F05C7A5C2D90C66C204BB783959FA60F
   SignatureSha256: D2C4B917E9E4DD816BEAA109793AB51419B19D18A0C231E616A5A142D9F61D3E
+  InstallerSuccessCodes:
+  - -1073741189
 ManifestType: installer
 ManifestVersion: 1.10.0
