--- a/manifests/m/Min/Min/1.35.2/Min.Min.installer.yaml
+++ b/manifests/m/Min/Min/1.35.2/Min.Min.installer.yaml
@@ -19,5 +19,7 @@ Installers:
 - Architecture: arm64
   InstallerUrl: https://github.com/minbrowser/min/releases/download/v1.35.2/min-1.35.2-arm64-setup.exe
   InstallerSha256: d12cbb7a8fdef07c6f9f9ffba3157f504e867959f169486939149961228c4eae
+InstallerSuccessCodes:
+- -1
 ManifestType: installer
 ManifestVersion: 1.12.0
