--- a/manifests/d/den4b/Colors/3.2/den4b.Colors.locale.en-GB.yaml
+++ b/manifests/d/den4b/Colors/3.2/den4b.Colors.locale.en-GB.yaml
@@ -1,8 +1,8 @@
-﻿#yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
+#yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.12.0.schema.json
 
 PackageIdentifier: den4b.Colors
 PackageVersion: "3.2"
-PackageLocale: en-US
+PackageLocale: en-GB
 Publisher: den4b Team
 PublisherUrl: https://www.den4b.com/
 PublisherSupportUrl: https://www.den4b.com/contact
@@ -13,10 +13,10 @@ PackageUrl: https://www.den4b.com/products/colors
 License: CC-BY-NC-ND-3.0
 LicenseUrl: https://www.den4b.com/license
 Copyright: den4b Team
-ShortDescription: A utility to pick color from pallets or screen content.
-Description: Color picker that helps you easily select a desired color using various pallets. It is also able to pick a color from the currently displayed screen content and supports a number of different color models, i.e. RGB, HSV, HSL, CMYK.
+ShortDescription: A utility to pick colour from pallets or screen content.
+Description: Colour picker that helps you easily select a desired colour using various pallets. It is also able to pick a colour from the currently displayed screen content and supports a number of different colour models, i.e. RGB, HSV, HSL, CMYK.
 Tags:
-- color
+- colours
 - colorpicker
 - colourpicker
 - eyedropper
@@ -29,7 +29,7 @@ Tags:
 - cmyk
 ReleaseNotes: |-
   Colors 3.2 has been released.
-  Summary of changes:
+  Summary of changes：
   • Upgraded build environment for improved support of newer platforms and other optimizations.
   • Improved system language detection and language override options.
   • Re-ordered HLS fields into more conventional HSL order.
@@ -37,5 +37,5 @@ ReleaseNotes: |-
   • Updated language files：Corsican.
   See the full changelog between versions 3.1 and 3.2 for more details.
 ReleaseNotesUrl: https://www.den4b.com/changelogs/colors
-ManifestType: defaultLocale
+ManifestType: locale
 ManifestVersion: 1.12.0
