--- a/manifests/g/Google/WorkspaceSyncForMicrosoftOutlook/4.3.85.0/Google.WorkspaceSyncForMicrosoftOutlook.installer.yaml
+++ b/manifests/g/Google/WorkspaceSyncForMicrosoftOutlook/4.3.85.0/Google.WorkspaceSyncForMicrosoftOutlook.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: Google.WorkspaceSyncForMicrosoftOutlook
-PackageVersion: 4.3.86.0
+PackageVersion: 4.3.85.0
 InstallerType: wix
 Scope: machine
 InstallerSwitches:
@@ -10,16 +10,17 @@ InstallerSwitches:
 Dependencies:
   PackageDependencies:
   - PackageIdentifier: Microsoft.Office
+ReleaseDate: 2025-10-23
 AppsAndFeaturesEntries:
 - UpgradeCode: '{C794D05C-EBB0-4440-95B0-DCB30592837E}'
 Installers:
 - Architecture: x86
   InstallerUrl: https://dl.google.com/dl/google-apps-sync/enterprise_gsync.msi
-  InstallerSha256: 0E917C18CC425B940DAB1432181350E10F6146E24C8A04FD094F54B618D19CF8
-  ProductCode: '{9D80BEFB-357F-46B0-9E92-99DA0FE07882}'
+  InstallerSha256: 875E07255BC9870BC0998A37BFE30CFB612E658E8B5B67E9D85CC985F1A3C957
+  ProductCode: '{9B41575D-5E31-46FD-BA2B-D19604B4ED0C}'
 - Architecture: x64
   InstallerUrl: https://dl.google.com/dl/google-apps-sync/x64/enterprise_gsync.msi
-  InstallerSha256: 72614FE395B2273AE82BD11F231D608181C5E8AF16C0ACA6C5ED163F1FDF7779
-  ProductCode: '{207288DF-63C4-4206-B98D-D4E85F5DAC72}'
+  InstallerSha256: A46A1F11AC4C7D35CB11AD5A3B61E6A5237FDD8B7C510384A99C5BCCFFC2B720
+  ProductCode: '{07428D61-25DF-4964-B7E1-E5078591F3F4}'
 ManifestType: installer
 ManifestVersion: 1.10.0
