Add ReleaseNotesUrl to AppLocate manifest
Added ReleaseNotesUrl to the manifest.

--- a/manifests/a/AppLocate/AppLocate/0.1.4/AppLocate.AppLocate.locale.en-US.yaml
+++ b/manifests/a/AppLocate/AppLocate/0.1.4/AppLocate.AppLocate.locale.en-US.yaml
@@ -24,5 +24,7 @@ Tags:
 - locate
 - where
 - find
+ReleaseNotesUrl: https://github.com/aalex954/applocate/releases/tag/v0.1.4
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
+
