--- a/manifests/m/Microsoft/MSIX-Toolkit/10.0.19041.1/Microsoft.MSIX-Toolkit.installer.yaml
+++ b/manifests/m/Microsoft/MSIX-Toolkit/10.0.19041.1/Microsoft.MSIX-Toolkit.installer.yaml
@@ -10,25 +10,25 @@ Installers:
   InstallerUrl: https://github.com/microsoft/MSIX-Toolkit/releases/download/1.4/MSIX-Toolkit.x64.zip
   InstallerSha256: C9B4B3C09EAA419087CA34BE80605A156CEA317FC2642275D40D59EEF09B3389
   NestedInstallerFiles:
-  - RelativeFilePath: MSIX-Toolkit.x64\ComparePackage.exe
+  - RelativeFilePath: MSIX-Toolkit.x64/ComparePackage.exe
     PortableCommandAlias: comparepackage
-  - RelativeFilePath: MSIX-Toolkit.x64\MakeAppx.exe
+  - RelativeFilePath: MSIX-Toolkit.x64/MakeAppx.exe
     PortableCommandAlias: makeappx
-  - RelativeFilePath: MSIX-Toolkit.x64\MakePri.exe
+  - RelativeFilePath: MSIX-Toolkit.x64/MakePri.exe
     PortableCommandAlias: makepri
-  - RelativeFilePath: MSIX-Toolkit.x64\PackageEditor.exe
+  - RelativeFilePath: MSIX-Toolkit.x64/PackageEditor.exe
     PortableCommandAlias: packageeditormsix
 - Architecture: x86
   InstallerUrl: https://github.com/microsoft/MSIX-Toolkit/releases/download/1.4/MSIX-Toolkit.x86.zip
   InstallerSha256: deb5dbfed6cdca097c3ab6ce7884da20a39425fd6537231a633d5e0a022ef353
   NestedInstallerFiles:
-  - RelativeFilePath: MSIX-Toolkit.x86\ComparePackage.exe
+  - RelativeFilePath: MSIX-Toolkit.x86/ComparePackage.exe
     PortableCommandAlias: comparepackage86
-  - RelativeFilePath: MSIX-Toolkit.x86\MakeAppx.exe
+  - RelativeFilePath: MSIX-Toolkit.x86/MakeAppx.exe
     PortableCommandAlias: makeappx86
-  - RelativeFilePath: MSIX-Toolkit.x86\MakePri.exe
+  - RelativeFilePath: MSIX-Toolkit.x86/MakePri.exe
     PortableCommandAlias: makepri86
-  - RelativeFilePath: MSIX-Toolkit.x86\PackageEditor.exe
+  - RelativeFilePath: MSIX-Toolkit.x86/PackageEditor.exe
     PortableCommandAlias: packageeditormsix86
 ArchiveBinariesDependOnPath: true
 ManifestType: installer
