--- a/manifests/m/Mozilla/Firefox/Unbranded/145.0.1/Mozilla.Firefox.Unbranded.installer.yaml
+++ b/manifests/m/Mozilla/Firefox/Unbranded/145.0.1/Mozilla.Firefox.Unbranded.installer.yaml
@@ -5,23 +5,23 @@ PackageVersion: 145.0.1
 InstallerType: zip
 NestedInstallerType: portable
 NestedInstallerFiles:
-- RelativeFilePath: firefox\firefox.exe
+- RelativeFilePath: firefox/firefox.exe
   PortableCommandAlias: firefoxunbranded
-- RelativeFilePath: firefox\crashhelper.exe
+- RelativeFilePath: firefox/crashhelper.exe
   PortableCommandAlias: crashhelper
-- RelativeFilePath: firefox\default-browser-agent.exe
+- RelativeFilePath: firefox/default-browser-agent.exe
   PortableCommandAlias: default-browser-agent
-- RelativeFilePath: firefox\maintenanceservice.exe
+- RelativeFilePath: firefox/maintenanceservice.exe
   PortableCommandAlias: maintenanceservice
-- RelativeFilePath: firefox\pingsender.exe
+- RelativeFilePath: firefox/pingsender.exe
   PortableCommandAlias: pingsender
-- RelativeFilePath: firefox\plugin-container.exe
+- RelativeFilePath: firefox/plugin-container.exe
   PortableCommandAlias: plugin-container
-- RelativeFilePath: firefox\updater.exe
+- RelativeFilePath: firefox/updater.exe
   PortableCommandAlias: firefoxunbrandedupdater
-- RelativeFilePath: firefox\desktop-launcher\desktop-launcher.exe
+- RelativeFilePath: firefox/desktop-launcher/desktop-launcher.exe
   PortableCommandAlias: firefoxunbrandeddesktoplauncher
-- RelativeFilePath: firefox\uninstall\helper.exe
+- RelativeFilePath: firefox/uninstall/helper.exe
   PortableCommandAlias: firefoxunbrandeduninstallhelper
 ArchiveBinariesDependOnPath: true
 Installers:
