Convert singleton manifest to multi-file format

--- a/manifests/c/chuthree/BrewGuide/1.5.10/chuthree.BrewGuide.yaml
+++ b/manifests/c/chuthree/BrewGuide/1.5.10/chuthree.BrewGuide.yaml
@@ -1,31 +1,5 @@
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.singleton.1.6.0.schema.json
 PackageIdentifier: chuthree.BrewGuide
 PackageVersion: 1.5.10
-PackageLocale: en-US
-Publisher: chuthree
-PublisherUrl: https://github.com/chuthree
-Author: chuthree
-PackageName: Brew Guide
-PackageUrl: https://github.com/chuthree/brew-guide
-License: GPL-3.0
-LicenseUrl: https://github.com/chuthree/brew-guide/blob/main/LICENSE
-ShortDescription: Coffee brewing assistant with timer, bean management, and tasting notes
-Description: |-
-  Brew Guide (咖啡冲煮指南) is an all-in-one coffee brewing assistant app.
-  Features include brewing timer with multi-stage guidance, coffee bean inventory management,
-  brewing notes with ratings and flavor profiles, and cloud sync support.
-Tags:
-  - coffee
-  - brewing
-  - timer
-  - productivity
-  - lifestyle
-Installers:
-  - Architecture: x64
-    InstallerType: nullsoft
-    InstallerUrl: https://github.com/chuthree/brew-guide/releases/download/v1.5.10/BrewGuide_1.5.10_windows_x64_setup.exe
-    InstallerSha256: 0CCF3A51BB9A8BB50F935DF679434268E0BE4B3791AE63C1F2152833CDEDA9E0
-    InstallerLocale: en-US
-    UpgradeBehavior: install
-ManifestType: singleton
+DefaultLocale: en-US
+ManifestType: version
 ManifestVersion: 1.6.0
