New version: LasseMarkusRautiainen.TextEditorPro version 35.3.0 (#328230)

--- a/manifests/l/LasseMarkusRautiainen/TextEditorPro/35.3.0/LasseMarkusRautiainen.TextEditorPro.locale.en-US.yaml
+++ b/manifests/l/LasseMarkusRautiainen/TextEditorPro/35.3.0/LasseMarkusRautiainen.TextEditorPro.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: LasseMarkusRautiainen.TextEditorPro
-PackageVersion: 35.2.1
+PackageVersion: 35.3.0
 PackageLocale: en-US
 Publisher: Lasse Markus Rautiainen
 PublisherUrl: https://texteditor.pro/
@@ -24,15 +24,13 @@ Tags:
 - editor
 - programming
 ReleaseNotes: |-
-  - Fixed AI chat
-  - Fixed AlphaControls - https://www.alphaskins.com/
-  - Fixed character counting
-  - Fixed move lines up/down
-  - Fixed Rust default file extension
-  - Fixed show last folder option
-  - Fixed text editor control - https://github.com/TextEditorPro/TTextEditor
-  - Fixed word wrap issues
+  - Added generate tree (to clipboard) directory feature
+  - Added generate tree directory options
+  - Fixed encoding/decoding
+  - Fixed replace
+  - Fixed search
   - Updated language files
+  - Updated PDFium 145.0.7616.0 binaries (DLL files) - https://github.com/bblanchon/pdfium-binaries
 
   Note! This product is always completely FREE for you. See the license.
 ReleaseNotesUrl: https://texteditor.pro/index.php?page=history
