--- a/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.installer.yaml
+++ b/manifests/m/Microsoft/DotNet/Framework/Runtime/4.8.1/Microsoft.DotNet.Framework.Runtime.installer.yaml
@@ -6,6 +6,7 @@ InstallerType: exe
 InstallerSwitches:
   Silent: /passive /AcceptEULA /norestart
   SilentWithProgress: /passive /AcceptEULA /norestart
+UpgradeBehavior: uninstallPrevious
 Installers:
 - Architecture: neutral
   InstallerUrl: https://download.microsoft.com/download/4/b/2/cd00d4ed-ebdd-49ee-8a33-eabc3d1030e3/NDP481-x86-x64-AllOS-ENU.exe
