axes4.PAC-2026-AEBBEC5A-BECA-4A5F-BB34-5B68477C158D

--- a/manifests/a/axes4/PAC/26.0.0.0/axes4.PAC.locale.en-US.yaml
+++ b/manifests/a/axes4/PAC/26.0.0.0/axes4.PAC.locale.en-US.yaml
@@ -1,34 +1,32 @@
-# Created with Sundry.
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
+# Created using wingetcreate 1.10.3.0
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: axes4.PAC
 PackageVersion: 26.0.0.0
 PackageLocale: en-US
 Publisher: axes4 GmbH
 PublisherUrl: https://www.axes4.com/
+PublisherSupportUrl: https://support.axes4.com
+PrivacyUrl: https://axes4.com/privacy
+Author: axes4 GmbH
 PackageName: PDF Accessibility Checker (PAC) 2026
 PackageUrl: https://pac.pdf-accessibility.org/
 License: Proprietary
+LicenseUrl: https://pac.pdf-accessibility.org/tc
 Copyright: Copyright (c) axes4 GmbH. All rights reserved.
-CopyrightUrl: https://pac.pdf-accessibility.org/en/imprint
-ShortDescription: The free PAC PDF Accessibility Checker helps you assess your documents.
-Description: >
-  PAC is the globally used, free PDF accessibility checking tool that
-  has been tried and tested since 2010. PAC can check many PDF/UA and
-  WCAG requirements at the touch of a button. In addition to this, PAC
-  also supports the required visual check.
+CopyrightUrl: https://pac.pdf-accessibility.org/imprint
+ShortDescription: Using the free PAC, you can check your PDF documents for accessibility.
+Description: |
+  PAC is the globally used, free PDF accessibility checking tool that has been tried and tested since 2010. PAC can check many PDF/UA and WCAG requirements at the touch of a button. In addition to this, PAC also supports the required visual check.
 Moniker: PAC
 Tags:
-  - PDF
-  - Accessibility
-  - Checker
-  - Document
+- PDF, PDF/UA-2, WCAG, Accessibility
 Agreements:
-  - AgreementLabel: General Terms
-    AgreementUrl: https://pac.pdf-accessibility.org/en/resources/general-terms
-ReleaseNotesUrl: https://pac.pdf-accessibility.org/en/history
+- AgreementLabel: General Terms
+  AgreementUrl: https://pac.pdf-accessibility.org/tc
+  Agreement: By installing this software, you agree to the terms found at https://pac.pdf-accessibility.org/tc
 Documentations:
-  - DocumentLabel: Resources
-    DocumentUrl: https://pac.pdf-accessibility.org/en/resources
+- DocumentLabel: Resources
+  DocumentUrl: https://pac.pdf-accessibility.org/en/resources
 ManifestType: defaultLocale
-ManifestVersion: 1.12.0
+ManifestVersion: 1.10.0
