--- a/manifests/a/axes4/PAC/26.0.0.0/axes4.PAC.locale.zh-CN.yaml
+++ b/manifests/a/axes4/PAC/26.0.0.0/axes4.PAC.locale.zh-CN.yaml
@@ -1,5 +1,5 @@
-# Created with Sundry.
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.12.0.schema.json
+# Created using wingetcreate 1.10.3.0
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.10.0.schema.json
 
 PackageIdentifier: axes4.PAC
 PackageVersion: 26.0.0.0
@@ -12,23 +12,19 @@ License: 专有软件
 Copyright: 版权所有 (c) axes4 GmbH. 保留所有权利.
 CopyrightUrl: https://pac.pdf-accessibility.org/en/imprint
 ShortDescription: 免费的 PAC PDF 可访问性检查工具，帮助您评估文档。
-Description: >
-  PAC 是全球使用的免费 PDF 可访问性检查工具，自
-  2010 年以来一直经过反复测试。PAC 可以一键检查多项
-  PDF/UA 和 WCAG 要求。此外，PAC 还支持必要的视觉检查。
-# Moniker: PAC
+Description: |
+  PAC 是全球使用的免费 PDF 可访问性检查工具，自 2010 年以来一直经过反复测试。PAC 可以一键检查多项 PDF/UA 和 WCAG 要求。此外，PAC 还支持必要的视觉检查。
 Tags:
-  - PDF
-  - 可访问性
-  - 检查
-  - 检查器
-  - 文档
+- PDF
+- 可访问性
+- 检查
+- 检查器
+- 文档
 Agreements:
-  - AgreementLabel: General Terms
-    AgreementUrl: https://pac.pdf-accessibility.org/en/resources/general-terms
-ReleaseNotesUrl: https://pac.pdf-accessibility.org/en/history
+- AgreementLabel: General Terms
+  AgreementUrl: https://pac.pdf-accessibility.org/en/resources/general-terms
 Documentations:
-  - DocumentLabel: 资源
-    DocumentUrl: https://pac.pdf-accessibility.org/en/resources
+- DocumentLabel: 资源
+  DocumentUrl: https://pac.pdf-accessibility.org/en/resources
 ManifestType: locale
-ManifestVersion: 1.12.0
+ManifestVersion: 1.10.0
