--- a/manifests/j/JRSoftware/InnoSetup/6.7.0/JRSoftware.InnoSetup.locale.en-US.yaml
+++ b/manifests/j/JRSoftware/InnoSetup/6.7.0/JRSoftware.InnoSetup.locale.en-US.yaml
@@ -7,7 +7,7 @@ PackageLocale: en-US
 Publisher: jrsoftware.org
 # PublisherUrl:
 # PublisherSupportUrl:
-PrivacyUrl: https://jrsoftware.org/isprivacy.php
+PrivacyUrl: https://jrsoftware.org/isorder-privacy.php
 Author: Jordan Russell and Martijn Laan
 PackageName: Inno Setup
 PackageUrl: https://jrsoftware.org/isinfo.php
