--- a/manifests/s/SimonG4ELI/WorldMap/1.5.4/SimonG4ELI.WorldMap.installer.yaml
+++ b/manifests/s/SimonG4ELI/WorldMap/1.5.4/SimonG4ELI.WorldMap.installer.yaml
@@ -8,6 +8,8 @@ InstallerType: nullsoft
 Scope: machine
 Dependencies:
   PackageDependencies:
+  - PackageIdentifier: Microsoft.VCRedist.2010.x64
+  - PackageIdentifier: Microsoft.VCRedist.2013.x64
   - PackageIdentifier: Microsoft.VCRedist.2015+.x64
     MinimumVersion: 14.42.34433.0
 ProductCode: SimonsWorldMap
