--- a/manifests/m/Microsoft/AppInstaller/1.27.440.0/Microsoft.AppInstaller.locale.en-US.yaml
+++ b/manifests/m/Microsoft/AppInstaller/1.27.440.0/Microsoft.AppInstaller.locale.en-US.yaml
@@ -14,9 +14,10 @@ PackageUrl: https://github.com/microsoft/winget-cli
 License: Commercial
 Copyright: Copyright (c) Microsoft Corporation. All rights reserved.
 ShortDescription: "Microsoft App Installer lets you easily install Windows apps with a double-click. It also includes WinGet for powerful command-line app management."
-Description: "Microsoft App Installer simplifies the installation of Windows applications by allowing users to sideload app packages with a double-click—no need to run PowerShell scripts or command-line tools. It presents key package details such as the app name, publisher, version, display logo, and requested capabilities, streamlining the installation experience and providing helpful error messages when issues arise.
+Description: |
+  Microsoft App Installer simplifies the installation of Windows applications by allowing users to sideload app packages with a double-click—no need to run PowerShell scripts or command-line tools. It presents key package details such as the app name, publisher, version, display logo, and requested capabilities, streamlining the installation experience and providing helpful error messages when issues arise.
 
-App Installer is available for desktop PCs and is distributed via the Microsoft Store. It also serves as the delivery vehicle for the Windows Package Manager (WinGet), a powerful command-line tool that enables users to discover, install, upgrade, and configure applications on Windows 10 and Windows 11 devices."
+  App Installer is available for desktop PCs and is distributed via the Microsoft Store. It also serves as the delivery vehicle for the Windows Package Manager (WinGet), a powerful command-line tool that enables users to discover, install, upgrade, and configure applications on Windows 10 and Windows 11 devices.
 Moniker: winget
 Tags:
 - command-line
