Fix InstallerUrl for Amazon.AWSCLI
The non-versioned InstallerUrl will not work here, see [this comment](https://github.com/microsoft/winget-pkgs/pull/328156/changes#r2666580976).  Previous winget versions have the AWSCLI version included in the URL, this one does not.

I don't know how to make the bot not do this when the next version is populated in winget.

--- a/manifests/a/Amazon/AWSCLI/2.32.29/Amazon.AWSCLI.installer.yaml
+++ b/manifests/a/Amazon/AWSCLI/2.32.29/Amazon.AWSCLI.installer.yaml
@@ -25,7 +25,8 @@ InstallationMetadata:
   DefaultInstallLocation: '%ProgramFiles%\Amazon\AWSCLIV2'
 Installers:
 - Architecture: x64
-  InstallerUrl: https://awscli.amazonaws.com/AWSCLIV2.msi
+  InstallerUrl: https://awscli.amazonaws.com/AWSCLIV2-2.32.29.msi
   InstallerSha256: 6A8D85711124ADA4813470061A6A468A16BA9C4B4236DEB292188E3C76F10C0B
 ManifestType: installer
 ManifestVersion: 1.10.0
+
