Update DisplayVersion for Visual Studio Community Insiders

--- a/manifests/m/Microsoft/VisualStudio/Community/Insiders/18.3.11312.210/Microsoft.VisualStudio.Community.Insiders.installer.yaml
+++ b/manifests/m/Microsoft/VisualStudio/Community/Insiders/18.3.11312.210/Microsoft.VisualStudio.Community.Insiders.installer.yaml
@@ -83,6 +83,8 @@ ExpectedReturnCodes:
   ReturnResponseUrl: https://learn.microsoft.com/en-us/troubleshoot/developer/visualstudio/installation/issues-workarounds-visual-studio-setup
 Commands:
 - devenv
+AppsAndFeaturesEntries:
+- DisplayVersion: Insiders [11312.210]
 Installers:
 - Architecture: x64
   InstallerType: exe
@@ -91,3 +93,4 @@ Installers:
   InstallerSha256: 355269d43aeccdb16caf0e2e07d652b59fbeefb2fdbf0db6bc0d3f044da75b7c
 ManifestType: installer
 ManifestVersion: 1.9.0
+
