--- a/manifests/a/astral-sh/uv/0.9.21/astral-sh.uv.locale.en-US.yaml
+++ b/manifests/a/astral-sh/uv/0.9.21/astral-sh.uv.locale.en-US.yaml
@@ -11,7 +11,7 @@ Author: Astral Software Inc.
 PackageName: uv
 PackageUrl: https://github.com/astral-sh/uv
 License: Apache-2.0 or MIT
-LicenseUrl: https://github.com/astral-sh/uv/blob/HEAD/README.md#license
+# LicenseUrl: https://github.com/astral-sh/uv/blob/HEAD/README.md#license
 Copyright: Copyright (c) 2025 Astral Software Inc.
 ShortDescription: An extremely fast Python package and project manager, written in Rust.
 Description: An extremely fast Python package and project manager, written in Rust. Designed as a single tool to replace pip, pip-tools, pipx, poetry, pyenv, twine, virtualenv workflows, and more.
