Comment out LicenseUrl

--- a/manifests/m/Myriad-Dreamin/Tinymist/0.14.6/Myriad-Dreamin.Tinymist.locale.en-US.yaml
+++ b/manifests/m/Myriad-Dreamin/Tinymist/0.14.6/Myriad-Dreamin.Tinymist.locale.en-US.yaml
@@ -10,7 +10,7 @@ PublisherSupportUrl: https://github.com/Myriad-Dreamin/tinymist/issues
 PackageName: Tinymist
 PackageUrl: https://github.com/Myriad-Dreamin/tinymist
 License: Apache-2.0
-LicenseUrl: https://github.com/Myriad-Dreamin/tinymist/blob/HEAD/LICENSE
+# LicenseUrl: https://github.com/Myriad-Dreamin/tinymist/blob/HEAD/LICENSE
 Copyright: Copyright 2026 Myriad Dreamin, Nathan Varner
 ShortDescription: An integrated language service for Typst.
 Description: |-
