--- a/manifests/m/Microsoft/DirectX/Mesh/2025.10.28.1/Microsoft.DirectX.Mesh.locale.en-US.yaml
+++ b/manifests/m/Microsoft/DirectX/Mesh/2025.10.28.1/Microsoft.DirectX.Mesh.locale.en-US.yaml
@@ -17,5 +17,6 @@ Tags:
 - sharedsourcelibrary
 - shared-source-library
 - vertex
+- requirescmd
 ManifestType: defaultLocale
 ManifestVersion: 1.12.0
