Added ARM64：Microsoft.DotNet.AspNetCore.7 version 7.0.20

--- a/manifests/m/Microsoft/DotNet/AspNetCore/7/7.0.20/Microsoft.DotNet.AspNetCore.7.installer.yaml
+++ b/manifests/m/Microsoft/DotNet/AspNetCore/7/7.0.20/Microsoft.DotNet.AspNetCore.7.installer.yaml
@@ -29,5 +29,13 @@ Installers:
     Publisher: Microsoft Corporation
     DisplayVersion: 7.0.20.24269
     ProductCode: '{c86e18a7-6dfc-4178-aae6-75351909e4d4}'
+- Architecture: arm64
+  InstallerType: burn
+  InstallerUrl: https://builds.dotnet.microsoft.com/dotnet/aspnetcore/Runtime/7.0.20/aspnetcore-runtime-7.0.20-win-arm64.exe
+  InstallerSha256: 5bf2d0fec598498f9e848bb4ca1559ed97b09bc466f5d861a5cb35efe8311935
+  AppsAndFeaturesEntries:
+  - DisplayName: Microsoft ASP.NET Core 7.0.20 - Shared Framework (ARM64)
+    Publisher: Microsoft Corporation
+    DisplayVersion: 7.0.20.24269
 ManifestType: installer
 ManifestVersion: 1.10.0
