NirSoft.SoundVolumeView version 2.50 (#328429)

--- a/manifests/n/NirSoft/SoundVolumeView/2.50/NirSoft.SoundVolumeView.installer.yaml
+++ b/manifests/n/NirSoft/SoundVolumeView/2.50/NirSoft.SoundVolumeView.installer.yaml
@@ -2,7 +2,8 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 
 PackageIdentifier: NirSoft.SoundVolumeView
-PackageVersion: "2.49"
+PackageVersion: "2.50"
+InstallerLocale: en-US
 InstallerType: zip
 NestedInstallerType: portable
 NestedInstallerFiles:
@@ -10,10 +11,10 @@ NestedInstallerFiles:
 Installers:
 - Architecture: x86
   InstallerUrl: https://www.nirsoft.net/utils/soundvolumeview.zip
-  InstallerSha256: 37DC33988761C50A5DE1EADDCF1BE49D8DD76BC7822B005CBD05065FA8132706
+  InstallerSha256: BFB1971712AE2773A105579DBC783C2E945D801CE0A430CFB2F45BDDFBB956EB
 - Architecture: x64
   InstallerUrl: https://www.nirsoft.net/utils/soundvolumeview-x64.zip
-  InstallerSha256: 33D14A0FB90BF0E8730BBB11D8E62F86B22C4670366A991E041409CE173688FB
+  InstallerSha256: 317FE0528F6F30A78549486BD7A01500E2085B60C3D16B879ED06009D7038700
 ManifestType: installer
 ManifestVersion: 1.10.0
-ReleaseDate: 2025-12-15
+ReleaseDate: 2026-01-05
