--- a/manifests/n/NirSoft/SoundVolumeView/2.50/NirSoft.SoundVolumeView.locale.en-US.yaml
+++ b/manifests/n/NirSoft/SoundVolumeView/2.50/NirSoft.SoundVolumeView.locale.en-US.yaml
@@ -2,23 +2,24 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: NirSoft.SoundVolumeView
-PackageVersion: "2.49"
+PackageVersion: "2.50"
 PackageLocale: en-US
 Publisher: NirSoft
-PublisherUrl: https://www.nirsoft.net/about_nirsoft_freeware.html
+PublisherUrl: https://www.nirsoft.net/
 PublisherSupportUrl: https://www.nirsoft.net/contact-new.html
 PrivacyUrl: https://www.nirsoft.net/about_nirsoft_freeware.html#Privacy_Policy
 Author: Nir Sofer
 PackageName: SoundVolumeView
 PackageUrl: https://www.nirsoft.net/utils/sound_volume_view.html
 License: Freeware
-LicenseUrl: https://www.nirsoft.net/utils/sound_volume_view.html
-Copyright: Copyright © 2013 - 2025 Nir Sofer
-CopyrightUrl: https://www.nirsoft.net/utils/sound_volume_view.html
+LicenseUrl: https://www.nirsoft.net/utils/sound_volume_view.html#:~:text=License
+Copyright: Copyright © 2013 - 2026 Nir Sofer
+CopyrightUrl: https://www.nirsoft.net/utils/sound_volume_view.html#:~:text=Copyright
 ShortDescription: View/Change sound volume on Windows 11/10/7/8/2008 from command-line or GUI, including on a per-program basis.
 Description: |
   SoundVolumeView is a simple tool for Windows Vista/7/8/2008/10/11 that displays general information and current volume level for all active sound components on your system, and allows you to mute and unmute them instantly.
   SoundVolumeView also allows you to save a sound profile into a file, containing the current volume level and the mute/unmute state of all sound components, as well as the default sound devices, and then later, load the same file to restore exactly the same volume levels and settings. There is also extensive command-line support, which allows you to save/load profiles, change current volume of every sound component, and mute/unmute every sound component, without displaying any user interface.
+Moniker: soundvolumeview
 Tags:
 - singlespeakers
 - single-speakers
@@ -35,11 +36,17 @@ Tags:
 - speaker-settings
 - requirescmd
 ReleaseNotes: |-
-  - Version 2.49:
-    - Fixed issue with setting default format of a device to 24-bit on some systems (/SetDefaultFormat command).
-ReleaseNotesUrl: https://www.nirsoft.net/utils/sound_volume_view.html
+  - Version 2.50:
+    - Added 'Cursor' option to all command-line options, which allows you to change the volume of the application under the mouse cursor. For example, the following command mutes/unmutes the application under the mouse cursor:
+      SoundVolumeView.exe /Switch Cursor
+    - Added 'CursorName' option to all command-line options, which allows you to change the volume of all instances of the application under the mouse cursor.
+ReleaseNotesUrl: https://www.nirsoft.net/utils/sound_volume_view.html#:~:text=Versions%20History
 Documentations:
-- DocumentLabel: Speaker balance examples
+- DocumentLabel: Speaker Balance Examples
   DocumentUrl: https://www.nirsoft.net/articles/set-audio-balance-command-line.html
+- DocumentLabel: FAQ
+  DocumentUrl: https://www.nirsoft.net/faq.html
+- DocumentLabel: Blog
+  DocumentUrl: https://blog.nirsoft.net/
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
