Add icons section to AppLocate locale file
Added icons section to the locale YAML file.

--- a/manifests/a/AppLocate/AppLocate/0.1.5/AppLocate.AppLocate.locale.en-US.yaml
+++ b/manifests/a/AppLocate/AppLocate/0.1.5/AppLocate.AppLocate.locale.en-US.yaml
@@ -25,5 +25,9 @@ Tags:
 - where
 - find
 ReleaseNotesUrl: https://github.com/aalex954/applocate/releases/tag/v0.1.5
+Icons:
+  - IconUrl: https://raw.githubusercontent.com/aalex954/applocate/main/assets/logo.ico
+    IconFileType: ico
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
+
