--- a/manifests/h/HMCL/HMCL/Dev/CNB/3.10.0.317/HMCL.HMCL.Dev.CNB.installer.yaml
+++ b/manifests/h/HMCL/HMCL/Dev/CNB/3.10.0.317/HMCL.HMCL.Dev.CNB.installer.yaml
@@ -8,7 +8,8 @@ Commands:
 - hmcl-dev
 Installers:
 - Architecture: neutral
-  InstallerUrl: https://github.com/HMCL-dev/HMCL/releases/download/v3.10.0.317/HMCL-3.10.0.317.exe
+  InstallerUrl: https://cnb.cool/HMCL-dev/HMCL/-/releases/download/v3.10.0.317/HMCL-3.10.0.317.exe
   InstallerSha256: 15a931019c33d0812bd17bf8d41e8dedca0b0fce37f60dfc983d098d41cdc5fd
 ManifestType: installer
 ManifestVersion: 1.10.0
+
