--- a/manifests/h/HMCL/HMCL/Stable/3.9.1/HMCL.HMCL.Stable.installer.yaml
+++ b/manifests/h/HMCL/HMCL/Stable/3.9.1/HMCL.HMCL.Stable.installer.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: HMCL.HMCL.Stable
 PackageVersion: 3.9.1
 InstallerType: portable
 Commands:
-- hmcl-dev
+- hmcl-stable
 Installers:
 - Architecture: neutral
   InstallerUrl: https://github.com/HMCL-dev/HMCL/releases/download/v3.9.1/HMCL-3.9.1.exe
