--- a/manifests/h/HydrologicEngineeringCenter/HEC-HMS/4.13/HydrologicEngineeringCenter.HEC-HMS.installer.yaml
+++ b/manifests/h/HydrologicEngineeringCenter/HEC-HMS/4.13/HydrologicEngineeringCenter.HEC-HMS.installer.yaml
@@ -8,8 +8,9 @@ InstallerSwitches:
   Silent: /S /v/qn
 ReleaseDate: 2025-07-11
 Installers:
-- Architecture: x86
+- Architecture: neutral
   InstallerUrl: https://github.com/HydrologicEngineeringCenter/hec-downloads/releases/download/1.0.38/HEC-HMS_413_Setup.exe
   InstallerSha256: 309BB87EF05CCC8E57CF9557BFDA9E711510AFC6929CF6ECBE36EAD0A6F063B8
 ManifestType: installer
 ManifestVersion: 1.10.0
+
