--- a/manifests/n/Nethesis/NethLink/1.2.0/Nethesis.NethLink.installer.yaml
+++ b/manifests/n/Nethesis/NethLink/1.2.0/Nethesis.NethLink.installer.yaml
@@ -1,5 +1,5 @@
-# Created with WinGet Releaser using komac v2.11.2
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.9.0.schema.json
+# Modified with Sundry.
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.12.0.schema.json
 
 PackageIdentifier: Nethesis.NethLink
 PackageVersion: 1.2.0
@@ -18,4 +18,4 @@ Installers:
   InstallerUrl: https://github.com/NethServer/nethlink/releases/download/v1.2.0/nethlink-1.2.0-setup.exe
   InstallerSha256: E26ECB90C891E133839C124A604CEF97615EB7440B0190730AC2ED71CEE6D062
 ManifestType: installer
-ManifestVersion: 1.9.0
+ManifestVersion: 1.12.0
