--- a/manifests/n/Nethesis/NethLink/1.2.3/Nethesis.NethLink.installer.yaml
+++ b/manifests/n/Nethesis/NethLink/1.2.3/Nethesis.NethLink.installer.yaml
@@ -1,5 +1,5 @@
-# Created with WinGet Releaser using komac v2.12.1
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
+# Modified with Sundry.
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.12.0.schema.json
 
 PackageIdentifier: Nethesis.NethLink
 PackageVersion: 1.2.3
@@ -11,11 +11,11 @@ InstallerSwitches:
 ProductCode: 9879779a-ce87-5347-8c79-57f1e76bcb67
 ReleaseDate: 2025-07-10
 AppsAndFeaturesEntries:
-- DisplayName: NethLink-1.2.3
-  ProductCode: 9879779a-ce87-5347-8c79-57f1e76bcb67
+  - DisplayName: NethLink-1.2.3
+    ProductCode: 9879779a-ce87-5347-8c79-57f1e76bcb67
 Installers:
-- Architecture: x86
-  InstallerUrl: https://github.com/NethServer/nethlink/releases/download/v1.2.3/nethlink-1.2.3-setup.exe
-  InstallerSha256: F0E889EB1F9AEB05377D0BC1F3BFA59BAB20002A0143C508E5318AB7F1275993
+  - Architecture: x64
+    InstallerUrl: https://github.com/NethServer/nethlink/releases/download/v1.2.3/nethlink-1.2.3-setup.exe
+    InstallerSha256: F0E889EB1F9AEB05377D0BC1F3BFA59BAB20002A0143C508E5318AB7F1275993
 ManifestType: installer
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
