Comment out inaccessiable URLs

--- a/manifests/x/XmacsLabs/Mogan/2025.2.3/XmacsLabs.Mogan.locale.zh-CN.yaml
+++ b/manifests/x/XmacsLabs/Mogan/2025.2.3/XmacsLabs.Mogan.locale.zh-CN.yaml
@@ -6,7 +6,7 @@ PackageVersion: 2025.2.3
 PackageLocale: zh-CN
 Publisher: XmacsLabs
 PublisherUrl: https://gitee.com/XmacsLabs
-PublisherSupportUrl: https://gitee.com/XmacsLabs/mogan/issues
+# PublisherSupportUrl: https://gitee.com/XmacsLabs/mogan/issues
 Author: 沈浪熊猫儿
 PackageName: Mogan Research
 PackageUrl: https://mogan.app/
