--- a/manifests/c/CatalystDevOrg/CatalystBrowser/3.2.2/CatalystDevOrg.CatalystBrowser.locale.en-US.yaml
+++ b/manifests/c/CatalystDevOrg/CatalystBrowser/3.2.2/CatalystDevOrg.CatalystBrowser.locale.en-US.yaml
@@ -1,13 +1,31 @@
-# Created using wingetcreate 1.1.2.0
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.2.0.schema.json
+# Created with komac v2.14.0
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 
 PackageIdentifier: CatalystDevOrg.CatalystBrowser
 PackageVersion: 3.2.2
 PackageLocale: en-US
-Publisher: JaydenDev
-PackageName: Catalyst3
+Publisher: CatalystDevOrg
+PublisherUrl: https://github.com/CatalystDevOrg
+PublisherSupportUrl: https://github.com/CatalystDevOrg/Catalyst/issues
+PackageName: catalyst-browser
+PackageUrl: https://github.com/CatalystDevOrg/Catalyst
 License: MIT
-Copyright: Copyright © 2022 JaydenDev
-ShortDescription: A minimal Electron Web Browser
+LicenseUrl: https://github.com/JaydenDev/Catalyst/blob/HEAD/LICENSE
+Copyright: Copyright © 2025 CatalystDevOrg
+ShortDescription: A minimal, functional, and customizable user-focused FOSS web browser.
+Tags:
+- browser
+- chromium
+- foss
+- minimal
+- no-extension-support
+- open-source
+- user-focused
+- web
+ReleaseNotes: '- Fixed plugins'
+ReleaseNotesUrl: https://github.com/CatalystDevOrg/Catalyst/releases/tag/v3.2.2
+Documentations:
+- DocumentLabel: Wiki
+  DocumentUrl: https://github.com/CatalystDevOrg/Catalyst/wiki
 ManifestType: defaultLocale
-ManifestVersion: 1.2.0
+ManifestVersion: 1.10.0
