--- a/manifests/w/WHONET/WHONET/25.13.7/WHONET.WHONET.locale.en-US.yaml
+++ b/manifests/w/WHONET/WHONET/25.13.7/WHONET.WHONET.locale.en-US.yaml
@@ -31,5 +31,10 @@ Tags:
 - Microbiology
 - Resistance
 - WHO
+ReleaseNotes: |-
+  Include the ID_LAB and ID_ISOLATE fields with the check for missing mandatory FAO-InFARM data.
+  Adds a missing check regarding the display of the sanitized FAO-InFARM file at the end of processing.
+ReleaseNotesUrl: https://whonet.org/WHONET-ReleaseNotes.html
 ManifestType: defaultLocale
 ManifestVersion: 1.10.0
+
