--- a/manifests/m/Microsoft/DotNet/AspNetCore/7/7.0.20/Microsoft.DotNet.AspNetCore.7.installer.yaml
+++ b/manifests/m/Microsoft/DotNet/AspNetCore/7/7.0.20/Microsoft.DotNet.AspNetCore.7.installer.yaml
@@ -13,6 +13,8 @@ Installers:
   InstallerUrl: https://builds.dotnet.microsoft.com/dotnet/aspnetcore/Runtime/7.0.20/aspnetcore-runtime-7.0.20-win-x64.exe
   InstallerSha256: AB9A6BFED06369DBE22328F54C69CE0660629EA6FC31BC554ED8B585EDB16A67
   ProductCode: '{6c2f4b5b-86d2-4aff-bf79-d1e73cc20ab3}'
+  InstallerSuccessCodes:
+  - 0
   AppsAndFeaturesEntries:
   - DisplayName: Microsoft ASP.NET Core 7.0.20 - Shared Framework (x64)
     Publisher: Microsoft Corporation
