--- a/manifests/w/Wagoo/WagooDesktop/1.0.0/Wagoo.WagooDesktop.locale.en-US.yaml
+++ b/manifests/w/Wagoo/WagooDesktop/1.0.0/Wagoo.WagooDesktop.locale.en-US.yaml
@@ -2,13 +2,13 @@ PackageIdentifier: Wagoo.WagooDesktop
 PackageVersion: 1.0.0
 PackageLocale: en-US
 Publisher: leo-lb29
-PublisherUrl: https://github.com/leo-lb29
-PublisherSupportUrl: https://github.com/leo-lb29/wagoo-desktop-v2/issues
+PublisherUrl: https://github.com/wagoo-app/desktop
+PublisherSupportUrl: https://github.com/wagoo-app/desktop/issues
 Author: leo-lb29
 PackageName: Wagoo Desktop
-PackageUrl: https://github.com/leo-lb29/wagoo-desktop-v2
+PackageUrl: https://github.com/wagoo-app/desktop
 License: Proprietary
-LicenseUrl: https://github.com/leo-lb29/wagoo-desktop-v2/blob/main/LICENSE
+LicenseUrl: https://github.com/wagoo-app/desktop/blob/main/LICENSE
 ShortDescription: Secure Electron wrapper for a Next.js website with auto-update and persistent session.
 Description: Wagoo Desktop is a secure Electron wrapper application for a Next.js website. It includes automatic updates and persistent session management.
 ManifestType: defaultLocale
