Update publisher and author information in locale file

--- a/manifests/w/Wagoo/WagooDesktop/1.0.0/Wagoo.WagooDesktop.locale.en-US.yaml
+++ b/manifests/w/Wagoo/WagooDesktop/1.0.0/Wagoo.WagooDesktop.locale.en-US.yaml
@@ -1,10 +1,10 @@
 PackageIdentifier: Wagoo.WagooDesktop
 PackageVersion: 1.0.0
 PackageLocale: en-US
-Publisher: leo-lb29
+Publisher: wagoo-app
 PublisherUrl: https://github.com/wagoo-app/desktop
 PublisherSupportUrl: https://github.com/wagoo-app/desktop/issues
-Author: leo-lb29
+Author: wagoo-app
 PackageName: Wagoo Desktop
 PackageUrl: https://github.com/wagoo-app/desktop
 License: Proprietary
