--- a/manifests/w/Wagoo/WagooDesktop/1.0.0/Wagoo.WagooDesktop.installer.yaml
+++ b/manifests/w/Wagoo/WagooDesktop/1.0.0/Wagoo.WagooDesktop.installer.yaml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.10.0.schema.json
 PackageIdentifier: Wagoo.WagooDesktop
 PackageVersion: 1.0.0
 InstallerLocale: en-US
@@ -14,4 +15,4 @@ Installers:
       Silent: /S
       SilentWithProgress: /S
 ManifestType: installer
-ManifestVersion: 1.4.0
+ManifestVersion: 1.10.0
