Update Wagoo Desktop manifest for version 1.10.0

--- a/manifests/w/Wagoo/WagooDesktop/1.0.0/Wagoo.WagooDesktop.locale.en-US.yaml
+++ b/manifests/w/Wagoo/WagooDesktop/1.0.0/Wagoo.WagooDesktop.locale.en-US.yaml
@@ -1,8 +1,9 @@
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
 PackageIdentifier: Wagoo.WagooDesktop
 PackageVersion: 1.0.0
 PackageLocale: en-US
 Publisher: wagoo-app
-PublisherUrl: https://github.com/wagoo-app/desktop
+PublisherUrl: https://github.com/wagoo-app
 PublisherSupportUrl: https://github.com/wagoo-app/desktop/issues
 Author: wagoo-app
 PackageName: Wagoo Desktop
@@ -12,4 +13,4 @@ LicenseUrl: https://github.com/wagoo-app/desktop/blob/main/LICENSE
 ShortDescription: Secure Electron wrapper for a Next.js website with auto-update and persistent session.
 Description: Wagoo Desktop is a secure Electron wrapper application for a Next.js website. It includes automatic updates and persistent session management.
 ManifestType: defaultLocale
-ManifestVersion: 1.4.0
+ManifestVersion: 1.10.0
