--- a/manifests/w/Wagoo/WagooDesktop/1.0.0/Wagoo.WagooDesktop.yaml
+++ b/manifests/w/Wagoo/WagooDesktop/1.0.0/Wagoo.WagooDesktop.yaml
@@ -1,5 +1,6 @@
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.10.0.schema.json
 PackageIdentifier: Wagoo.WagooDesktop
 PackageVersion: 1.0.0
 DefaultLocale: en-US
 ManifestType: version
-ManifestVersion: 1.4.0
+ManifestVersion: 1.10.0
