--- a/manifests/s/SoftwareOK/DirPrintOK/7.51/SoftwareOK.DirPrintOK.locale.en-US.yaml
+++ b/manifests/s/SoftwareOK/DirPrintOK/7.51/SoftwareOK.DirPrintOK.locale.en-US.yaml
@@ -1,8 +1,8 @@
 # Created with YamlCreate.ps1 Dumplings Mod
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.10.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.12.0.schema.json
 
 PackageIdentifier: SoftwareOK.DirPrintOK
-PackageVersion: "7.49"
+PackageVersion: "7.51"
 PackageLocale: en-US
 Publisher: SoftwareOK
 PublisherUrl: https://www.softwareok.com/
@@ -13,15 +13,15 @@ PackageName: DirPrintOK
 PackageUrl: https://www.softwareok.com/?seite=Freeware/DirPrintOK
 License: Freeware
 LicenseUrl: https://www.softwareok.com/?seite=Freeware/DirPrintOK/Eula
-Copyright: Copyright © 2006-2025 Nenad Hrg
+Copyright: Copyright © 2006-2026 Nenad Hrg
 ShortDescription: Print Folders and Directory structure ergo Tree
 Description: It is very easy to print the content of a directory with the folder print explorer! This Folder Print Tool for all MS Windows OS has a print preview with variable aspect ratio and also export functions to XLS, HTML, CSV, TXT. Supports MS Explorer Views plus Tree-List, tree-list-plus, filters & Console. This folder print explorer is an unknown Tool from the category file management on Software OK!
 Tags:
 - directory
 - folder
 ReleaseNotes: |-
-  - Incorrect version in the title bar of the directory printout app for all MS Windows OS
-  - Minor corrections and adjustments
+  - General optimization and language file update in Dir-Print-OK
+  - Adjustments and improvements to the directory printing app for MS Windows
 ReleaseNotesUrl: https://www.softwareok.com/?seite=Freeware/DirPrintOK/History
 Documentations:
 - DocumentLabel: Manual
@@ -29,4 +29,4 @@ Documentations:
 - DocumentLabel: FAQ
   DocumentUrl: https://www.softwareok.com/?seite=faq-DirPrintOK&faq=0
 ManifestType: defaultLocale
-ManifestVersion: 1.10.0
+ManifestVersion: 1.12.0
