--- a/manifests/h/HP/HPUniversalPrintDriver/PCL6/7.9.0.26347/HP.HPUniversalPrintDriver.PCL6.installer.yaml
+++ b/manifests/h/HP/HPUniversalPrintDriver/PCL6/7.9.0.26347/HP.HPUniversalPrintDriver.PCL6.installer.yaml
@@ -7,6 +7,8 @@ InstallerType: zip
 NestedInstallerType: exe
 NestedInstallerFiles:
 - RelativeFilePath: Install.exe
+InstallModes:
+  - interactive
 Installers:
 - Architecture: x64
   InstallerUrl: https://ftp.hp.com/pub/softlib/software13/printers/UPD/upd-pcl6-x64-7.9.0.26347.zip
@@ -16,3 +18,4 @@ Installers:
   InstallerSha256: 694B2EA60FA0F992E7D4F28932C88AB8D37F82FE1B3DF00B7E9008219B572DFF
 ManifestType: installer
 ManifestVersion: 1.10.0
+
