--- a/manifests/s/Sonuscape/Mouseless/0.4.3/Sonuscape.Mouseless.installer.yaml
+++ b/manifests/s/Sonuscape/Mouseless/0.4.3/Sonuscape.Mouseless.installer.yaml
@@ -18,8 +18,7 @@ Installers:
     PortableCommandAlias: mouseless
   InstallerUrl: https://github.com/croian/mouseless/releases/download/v0.4.3/mouseless-portable_v0.4.3.zip
   InstallerSha256: A5793C931B5B71D9AFFA497F15120069FA6AACB6C7F1FDA9F3724DF35A50521C
-- InstallerLocale: en-US
-  Architecture: x86
+- Architecture: x86
   InstallerType: inno
   Scope: user
   InstallerUrl: https://github.com/croian/mouseless/releases/download/v0.4.3/mouseless-installer_v0.4.3.exe
@@ -30,8 +29,7 @@ Installers:
   AppsAndFeaturesEntries:
   - ProductCode: '{2CF8FE24-5D49-4438-ACBF-E653404B9BCE}}_is1'
   ElevationRequirement: elevatesSelf
-- InstallerLocale: en-US
-  Architecture: x86
+- Architecture: x86
   InstallerType: inno
   Scope: machine
   InstallerUrl: https://github.com/croian/mouseless/releases/download/v0.4.3/mouseless-installer_v0.4.3.exe
@@ -46,3 +44,4 @@ Installers:
     DefaultInstallLocation: '%ProgramFiles%\Mouseless'
 ManifestType: installer
 ManifestVersion: 1.10.0
+
