--- a/manifests/p/Posit/Positron/12.2.5/Posit.Positron.installer.yaml
+++ b/manifests/p/Posit/Positron/12.2.5/Posit.Positron.installer.yaml
@@ -6,6 +6,8 @@ PackageVersion: 12.2.5
 InstallerLocale: en-US
 InstallerType: inno
 InstallerSwitches:
+  Silent: /VERYSILENT
+  SilentWithProgress: /SILENT
   Custom: /mergetasks=!runcode
 UpgradeBehavior: install
 Protocols:
@@ -173,3 +175,4 @@ Installers:
     DefaultInstallLocation: '%ProgramFiles%\Positron'
 ManifestType: installer
 ManifestVersion: 1.10.0
+
